# lannot

./: .gitattributes  .gitignore  .gitlab-ci.yml  LAnnotate.mli  Makefile  Makefile.in  README.markdown  README.md  annotators.ml  annotators.mli  assertCov.ml  assertion.ml  ast_const.ml  ast_const.mli  bes.ml  bes.mli  clean_dataflow.ml  clean_dataflow.mli  condition.ml  config.ml  configure.ac  context.ml  dataflow.ml  decision.ml  dune  dune-project  frama-c-lannotate.opam  frama-c-lannotate.opam.template  function.ml  instru.ml  l_boundary.ml  l_boundary.mli  l_context.ml  l_dataflow.ml  l_dataflows.ml  l_dataflows.mli  l_dataflows_adup.ml  l_function.ml  l_function.mli  l_logical.ml  (+36 more)
doc/: criteria.markdown  internals.markdown  loops.markdown
doc/code/: modules.dot
headers/: header_config.txt
headers/open-source/: CEA_LGPL.lannotate
nix/: ci.sh  lannotate.nix  pkgs.nix
papadakis-wm-sm-version/: .gitignore  Makefile  annotators.ml  annotators.mli  decision.ml  instru.ml  options.ml  register.ml  utils.ml
share/: dune  labels.h
tests/: .gitignore  ptests_config  t1.c  t2.c  t3.c  t4.c
tests/CACC/: TriTyp.c
tests/CACC/oracle/: TriTyp_labels.labels
tests/CACC/result/: TriTyp_labels.c  TriTyp_labels.hyperlabels
tests/CC/: TriTyp_CC.c
tests/CC/oracle/: TriTyp_CC.res.oracle  TriTyp_CC_labels.labels  TriTyp_labels.c  TriTyp_labels.labels
tests/CC/result/: TriTyp_labels.labels
tests/DC/: TriTyp.c
tests/DC/oracle/: TriTyp.res.oracle  TriTyp_DC.res.oracle  TriTyp_DC_labels.labels  TriTyp_labels.c  TriTyp_labels.labels
tests/DC/result/: TriTyp_labels.labels
tests/FC/: mandelbrot_d.c
tests/FC/oracle/: mandelbrot_d.res.oracle  mandelbrot_d_labels.c  mandelbrot_d_labels.labels
tests/FCC/: mandelbrot_d.c
tests/FCC/oracle/: mandelbrot_d.res.oracle  mandelbrot_d_labels.c  mandelbrot_d_labels.hyperlabels  mandelbrot_d_labels.labels
tests/MCC/: TriTyp.c
tests/MCC/oracle/: TriTyp.res.oracle  TriTyp_labels.c  TriTyp_labels.labels
tests/NCC/: TriTyp.c
tests/NCC/oracle/: TriTyp.res.oracle  TriTyp_labels.c  TriTyp_labels.labels
tests/criteria/: test_ADC.c  test_ASSERT.c  test_AUC.c  test_CACC.c  test_CC.c  test_DC.c  test_DUC.c  test_ELO.c  test_FC.c  test_FCC.c  test_GACC.c  test_GICC.c  test_LIMIT.c  test_LOOPIN.c  test_LOOPOUT.c  test_MCC.c  test_NCC.c  test_RACC.c  test_SLO.c  test_STMT.c  test_WM.c  test_alldefs.c  test_alluses.c  test_context.c  test_defuse.c
tests/criteria/hyperlabels/: test_config
tests/criteria/labels/: test_config
tests/criteria/oracle/: test_ADC.res.oracle  test_ADC_labels.c  test_ADC_labels.hyperlabels  test_ASSERT.res.oracle  test_ASSERT_labels.c  test_ASSERT_labels.labels  test_AUC.res.oracle  test_AUC_labels.c  test_AUC_labels.hyperlabels  test_CACC.res.oracle  test_CACC_labels.c  test_CACC_labels.hyperlabels  test_CACC_labels.labels  test_CC_labels.c  test_CC_labels.labels  test_DC_labels.c  test_DC_labels.labels  test_DUC.res.oracle  test_DUC_labels.c  test_DUC_labels.hyperlabels  test_ELO_labels.c  test_ELO_labels.labels  test_FCC_labels.c  test_FCC_labels.hyperlabels  test_FCC_labels.labels  test_FC_labels.c  test_FC_labels.labels  test_GACC_labels.c  test_GACC_labels.labels  test_GICC_labels.c  test_GICC_labels.labels  test_LIMIT_labels.c  test_LIMIT_labels.labels  test_LOOPIN.res.oracle  test_LOOPIN_labels.c  test_LOOPIN_labels.labels  test_LOOPOUT.res.oracle  test_LOOPOUT_labels.c  test_MCC_labels.c  test_MCC_labels.labels  (+18 more)
tests/criteria/tmp/: driv.c  test_ASSERT.c
tests/gd-MCDC/: gd.h  gd_full_bad.c  gd_full_bad_CACC.c  gd_full_bad_CACC.hyperlabels  gd_full_bad_GACC.c  gd_full_bad_RACC.c  gd_full_bad_RACC.hyperlabels
tests/gd-MCDC/lib/: frama_c_journal.ml  stubs.h
tests/hyperlabels/: test_BADC.c  test_BADC_post.c  test_BAUC.c  test_BAUC_post.c  test_BDUC.c  test_BDUC_post.c  test_clean_equiv_2.c  test_config  test_context.c
tests/hyperlabels/oracle/: test_ADC.res.oracle  test_ADC_labels.c  test_ADC_labels.hyperlabels  test_ADC_labels.labels  test_AUC.res.oracle  test_AUC_labels.c  test_AUC_labels.hyperlabels  test_AUC_labels.labels  test_BADC.res.oracle  test_BADC_labels.c  test_BADC_labels.hyperlabels  test_BADC_labels.labels  test_BADC_post.res.oracle  test_BADC_post_labels.c  test_BADC_post_labels.hyperlabels  test_BADC_post_labels.labels  test_BAUC.res.oracle  test_BAUC_labels.c  test_BAUC_labels.hyperlabels  test_BAUC_labels.labels  test_BAUC_post.res.oracle  test_BAUC_post_labels.c  test_BAUC_post_labels.hyperlabels  test_BAUC_post_labels.labels  test_BDUC.res.oracle  test_BDUC_labels.c  test_BDUC_labels.hyperlabels  test_BDUC_labels.labels  test_BDUC_post.res.oracle  test_BDUC_post_labels.c  test_BDUC_post_labels.hyperlabels  test_BDUC_post_labels.labels  test_CACC.res.oracle  test_CACC_labels.c  test_DUC.res.oracle  test_DUC_labels.c  test_DUC_labels.hyperlabels  test_DUC_labels.labels  test_FCC.res.oracle  test_FCC_labels.c  (+32 more)
tests/labels/: test_CB.c  test_IOB.c  test_RCC.c  test_config  test_new_ADC.c
tests/labels/oracle/: test_CB.res.oracle  test_CB_labels.c  test_CB_labels.labels  test_CC.res.oracle  test_CC_labels.c  test_DC.res.oracle  test_DC_labels.c  test_ELO.res.oracle  test_ELO_labels.c  test_FC.res.oracle  test_FC_labels.c  test_GACC.res.oracle  test_GACC_labels.c  test_GICC.res.oracle  test_GICC_labels.c  test_IOB.res.oracle  test_IOB_labels.c  test_IOB_labels.labels  test_LIMIT.res.oracle  test_LIMIT_labels.c  test_MCC.res.oracle  test_MCC_labels.c  test_NCC.res.oracle  test_NCC_labels.c  test_RCC.res.oracle  test_RCC_labels.c  test_RCC_labels.labels  test_SLO.res.oracle  test_SLO_labels.c  test_SLO_labels.labels  test_STMT.res.oracle  test_STMT_labels.c  test_WM.res.oracle  test_WM_labels.c  test_annot_allbool.res.oracle  test_annot_allbool_labels.c  test_annot_functions.res.oracle  (+1 more)
tests/misc/: test_annot_functions.c
tests/options/: test_annot_allbool.c  test_annot_functions.c  test_clean_duplicate_sequence.c
tests/triTyp/: TriTyp_CC.c  TriTyp_DC.c
tests/triType-MCDC/: TriTyp.c  TriTyp_CACC.c  TriTyp_GACC.c  TriTyp_RACC.c  TriTyp_RACC.hyperlabels
(+35 files in other folders)
