;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;                                                                        ;;
;;  This file is part of the Frama-C's Lannotate plug-in.                 ;;
;;                                                                        ;;
;;  Copyright (C) 2012-2022                                               ;;
;;    CEA (Commissariat à l'énergie atomique et aux énergies              ;;
;;         alternatives)                                                  ;;
;;                                                                        ;;
;;  you can redistribute it and/or modify it under the terms of the GNU   ;;
;;  Lesser General Public License as published by the Free Software       ;;
;;  Foundation, version 2.1.                                              ;;
;;                                                                        ;;
;;  It is distributed in the hope that it will be useful,                 ;;
;;  but WITHOUT ANY WARRANTY; without even the implied warranty of        ;;
;;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         ;;
;;  GNU Lesser General Public License for more details.                   ;;
;;                                                                        ;;
;;  See the GNU Lesser General Public License version 2.1                 ;;
;;  for more details (enclosed in the file LICENSE)                       ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(rule
  (alias frama-c-configure)
  (deps (universe))
  (action
    (progn
     (echo "Lannotate:" %{lib-available:frama-c-lannotate.core} "\n")
     (echo " - Frama-C:" %{lib-available:frama-c.kernel} "\n")
     (echo " - Postdominators:" %{lib-available:frama-c-postdominators.core} "\n")
    )
  )
)

(library
  (optional)
  (name lannotate)
  (public_name frama-c-lannotate.core)
  (flags -open Frama_c_kernel :standard -w -9)
  (libraries frama-c.kernel frama-c-postdominators.core batteries)
)

(plugin
 (optional)
 (name lannotate)
 (libraries frama-c-lannotate.core)
 (site (frama-c plugins)))
